--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -613,4 +613,44 @@
     <string name="account_error_upgraded" context="Message shown when the payment of an upgrade has not been correct">L\'opération ne s\'est pas terminée correctement. La carte de crédit ne sera pas facturée.</string>
     <string name="credit_card_information_error" context="Message shown when the credit card information is not correct">Les informations de la carte de crédit n\'est pas correcte.  La carte de crédit ne sera pas facturée.</string>
     <string name="not_upgrade_is_possible" context="Message shown when the user wants to upgrade an account that cannot be upgraded">Votre compte ne peut pas être mis-à-jour depuis l\'application. Veuillez contacter support@mega.nz pour mettre votre compte à niveau.</string>
+
+    <string name="menu_add_contact_and_share" context="Menu option to add a contact to your contact list.">Ajouter un contact et partager</string>
+    <string name="general_share" context="button">Partager</string>
+    <string name="general_remove" context="button">Supprimer</string>
+    <string name="general_confirm" context="button">Confirmer</string>
+    <string name="general_leave" context="button">Partir</string>
+    <string name="general_decryp" context="button">Déchiffrer</string>
+    <string name="general_export" context="button">Exporter</string>
+    <string name="confirmation_required" context="Alert title before download">Confirmation requise</string>
+    <string name="alert_larger_file" context="Alert text before download">%s vont être téléchargés. Êtes-vous certain(e)?</string>
+    <string name="alert_no_app" context="Alert text before download">Vous n\'avez pas d\'application à votre disposition capable d\'ouvrir le fichier %s. Souhaitez-vous procéder quand même au téléchargement?</string>
+    <string name="checkbox_not_show_again" context="Alert checkbox before download">Ne plus afficher</string>
+    <string name="lastname_text" context="Last name of the user">Nom</string>
+    <string name="error_general_nodes" context="Error getting the root node">Erreur. Veuillez essayer à nouveau.</string>
+    <string name="settings_about_code_link_title" context="Link to the public code of the app">Voir le code source</string>
+    <string name="contacts_explorer_list_empty_text" context="Add new contacts before sharing.">Ajouter un nouveau contact pour commencer le partage</string>
+    <string-array name="settings_storage_download_location_array" context="if the user has an internal and an external SD card, it has to be set on the settings screen">
+        <item context="internal SD card option">Carte SD Interne</item>
+        <item context="external SD card option">Carte SD Externe</item>
+    </string-array>
+    <string name="context_folder_no_created" context="error message when creating a folder">Erreur. Le dossier n\'a pas été créé</string>
+    <string name="rubbish_bin_emptied" context="success message when emptying the RB">La Corbeille a été vidée avec succès</string>
+    <string name="rubbish_bin_no_emptied" context="error message when emptying the RB">Erreur. La Corbeille n\'a pas pu être vidée</string>
+    <string name="sortby_owner_mail" context="category in sort by action">E-mail du propriétaire</string>
+    <string name="pin_lock_type" context="title to choose the type of PIN code">Type de code PIN</string>
+    <string name="four_pin_lock" context="PIN with 4 digits">Code PIN à 4 chiffres</string>
+    <string name="six_pin_lock" context="PIN with 6 digits">Code PIN à 6 chiffres</string>
+    <string name="AN_pin_lock" context="PIN alphanumeric">Code PIN alphanumérique</string>
+    <string name="empty_inbox" context="Text that indicates that Inbox is empty">Dossier vide</string>
+    <string name="context_correctly_sent_node" context="success message when sending a node to Inbox">Envoyé dans la boîte de réception</string>
+    <string name="context_no_sent_node" context="error message when sending a node to Inbox">Erreur. N\'a pas été envoyé à \'à boîte de réception</string>
+    <string name="context_contact_invitation_sent" context="success message when sending a contact request">Demande envoyée</string>
+    <string name="sortby_creation_date" context="category in sort by action">Date de Création</string>
+    <string name="sortby_modification_date" context="category in sort by action">Date de Modification</string>
+    <string name="contact_invite" context="positive button on dialog to invite a contact">Inviter</string>
+    <string name="confirmation_add_contact" context="confirmation message before sending an invitation to a contact">Souhaitez-vous envoyer une invitation à %s?</string>
+    <string name="context_contact_request_sent" context="success message when sending a contact request">Demande d\'ajout de contact envoyée à %s avec succès. Vous pouvez vérifier si statut dans l\'onglet Demandes Envoyées.</string>
+    <string name="log_out_warning" context="alert when clicking a newsignup link being logged">Veuillez vous déconnecter avant de créer le  compte</string>
+    <string name="settings_enable_logs" context="Confirmation message when enabling logs in the app">La journalisation des messages (logs) est maintenant activée</string>
+    <string name="settings_disable_logs" context="Confirmation message when disabling logs in the app">La journalisation des messages (logs) est maintenant désactivée</string>
 </resources>
