--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -613,4 +613,44 @@
     <string name="account_error_upgraded" context="Message shown when the payment of an upgrade has not been correct">작업이 올바르게 종료되지 않았습니다. 신용카드 결제가 이루어지지 않을 것입니다.</string>
     <string name="credit_card_information_error" context="Message shown when the credit card information is not correct">신용카드 정보가 올바르지 않습니다. 신용카드로 결제되지 않을 것입니다.</string>
     <string name="not_upgrade_is_possible" context="Message shown when the user wants to upgrade an account that cannot be upgraded">앱에서 계정을 업그레이드할 수 없습니다. 계정을 업그레이드 하려면 support@mega.nz로 문의바랍니다.</string>
+
+    <string name="menu_add_contact_and_share" context="Menu option to add a contact to your contact list.">연락처를 추가하고 공유</string>
+    <string name="general_share" context="button">공유</string>
+    <string name="general_remove" context="button">제거</string>
+    <string name="general_confirm" context="button">확인</string>
+    <string name="general_leave" context="button">떠나기</string>
+    <string name="general_decryp" context="button">해독</string>
+    <string name="general_export" context="button">내보내기</string>
+    <string name="confirmation_required" context="Alert title before download">확인이 필요함</string>
+    <string name="alert_larger_file" context="Alert text before download">%s이/가 다운로드 됩니다. 확실합니까?</string>
+    <string name="alert_no_app" context="Alert text before download">%s 파일을 열기에 적합한 어플리케이션이 없습니다. 다운로드를 진행할까요?</string>
+    <string name="checkbox_not_show_again" context="Alert checkbox before download">다시 보여주지 마세요</string>
+    <string name="lastname_text" context="Last name of the user">성</string>
+    <string name="error_general_nodes" context="Error getting the root node">오류. 다시 시도하세요.</string>
+    <string name="settings_about_code_link_title" context="Link to the public code of the app">소스 코드 보기</string>
+    <string name="contacts_explorer_list_empty_text" context="Add new contacts before sharing.">공유를 시작하려면 새 연락처를 추가하세요</string>
+    <string-array name="settings_storage_download_location_array" context="if the user has an internal and an external SD card, it has to be set on the settings screen">
+        <item context="internal SD card option">내부 SD 카드</item>
+        <item context="external SD card option">외부 SD 카드</item>
+    </string-array>
+    <string name="context_folder_no_created" context="error message when creating a folder">오류. 폴더가 생성되지 않음</string>
+    <string name="rubbish_bin_emptied" context="success message when emptying the RB">휴지통이 성공적으로 비워졌습니다</string>
+    <string name="rubbish_bin_no_emptied" context="error message when emptying the RB">오류. 휴지통이 비워지지 않았습니다.</string>
+    <string name="sortby_owner_mail" context="category in sort by action">소유주의 이메일</string>
+    <string name="pin_lock_type" context="title to choose the type of PIN code">PIN 코드 유형</string>
+    <string name="four_pin_lock" context="PIN with 4 digits">4자리 PIN</string>
+    <string name="six_pin_lock" context="PIN with 6 digits">6자리 PIN</string>
+    <string name="AN_pin_lock" context="PIN alphanumeric">영숫자 PIN</string>
+    <string name="empty_inbox" context="Text that indicates that Inbox is empty">빈 폴더</string>
+    <string name="context_correctly_sent_node" context="success message when sending a node to Inbox">수신함으로 보내짐</string>
+    <string name="context_no_sent_node" context="error message when sending a node to Inbox">오류. 수신함으로 보내지지 않음</string>
+    <string name="context_contact_invitation_sent" context="success message when sending a contact request">요청 발송됨</string>
+    <string name="sortby_creation_date" context="category in sort by action">생성일</string>
+    <string name="sortby_modification_date" context="category in sort by action">수정일</string>
+    <string name="contact_invite" context="positive button on dialog to invite a contact">초대</string>
+    <string name="confirmation_add_contact" context="confirmation message before sending an invitation to a contact">%s님께 초대장을 보낼까요?</string>
+    <string name="context_contact_request_sent" context="success message when sending a contact request">연락처 요청이 성공적으로 %s님께 전송되었습니다. 전송된 요청 탭에서 상황을 확인할 수 있습니다.</string>
+    <string name="log_out_warning" context="alert when clicking a newsignup link being logged">계정을 생성하기 전에 로그아웃 하세요.</string>
+    <string name="settings_enable_logs" context="Confirmation message when enabling logs in the app">로그가 활성화 되었습니다.</string>
+    <string name="settings_disable_logs" context="Confirmation message when disabling logs in the app">로그가 비활성화 되었습니다.</string>
 </resources>
