--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -627,4 +627,44 @@
     <string name="account_error_upgraded" context="Message shown when the payment of an upgrade has not been correct">Operacja nie została zakończona poprawnie. Karta nie zostanie obciążona.</string>
     <string name="credit_card_information_error" context="Message shown when the credit card information is not correct">Dane karty kredytowej są nie poprawne. Karta nie zostanie obciążona.</string>
     <string name="not_upgrade_is_possible" context="Message shown when the user wants to upgrade an account that cannot be upgraded">Twoje konto nie może zostać zmienione z tej aplikacji. Skontaktuj się z support@mega.nz aby dokonać zmiany.</string>
+
+    <string name="menu_add_contact_and_share" context="Menu option to add a contact to your contact list.">Dodaj kontakt i udostępnij</string>
+    <string name="general_share" context="button">Udostępnij</string>
+    <string name="general_remove" context="button">Usuń</string>
+    <string name="general_confirm" context="button">Potwierdź</string>
+    <string name="general_leave" context="button">Anuluj</string>
+    <string name="general_decryp" context="button">Odszyfruj</string>
+    <string name="general_export" context="button">Eksportuj</string>
+    <string name="confirmation_required" context="Alert title before download">Wymagana weryfikacja</string>
+    <string name="alert_larger_file" context="Alert text before download">%s będzie pobrane. Czy chcesz kontynuować?</string>
+    <string name="alert_no_app" context="Alert text before download">Nie posiadasz aplikacji umożliwiającej otwarcie pliku %s. Czy na pewno chcesz pobarać ten plik?</string>
+    <string name="checkbox_not_show_again" context="Alert checkbox before download">Nie pokazuj więcej</string>
+    <string name="lastname_text" context="Last name of the user">Nazwisko</string>
+    <string name="error_general_nodes" context="Error getting the root node">Błąd. Spróbuj ponownie.</string>
+    <string name="settings_about_code_link_title" context="Link to the public code of the app">Zobacz kod źródłowy</string>
+    <string name="contacts_explorer_list_empty_text" context="Add new contacts before sharing.">Dodaj nowy kontakt aby udostępnić</string>
+    <string-array name="settings_storage_download_location_array" context="if the user has an internal and an external SD card, it has to be set on the settings screen">
+        <item context="internal SD card option">Wenętrzna karta SD</item>
+        <item context="external SD card option">Zewnętrzna karta SD</item>
+    </string-array>
+    <string name="context_folder_no_created" context="error message when creating a folder">Błąd. Katalog nie został utworzony</string>
+    <string name="rubbish_bin_emptied" context="success message when emptying the RB">Koszt został wyczyszczony</string>
+    <string name="rubbish_bin_no_emptied" context="error message when emptying the RB">Błąd. Kosz nie został wyczyszczony</string>
+    <string name="sortby_owner_mail" context="category in sort by action">Właściciel e-mail</string>
+    <string name="pin_lock_type" context="title to choose the type of PIN code">Rodzaj kodu PIN</string>
+    <string name="four_pin_lock" context="PIN with 4 digits">4 cyfrowy PIN</string>
+    <string name="six_pin_lock" context="PIN with 6 digits">6 cyfrowy PIN</string>
+    <string name="AN_pin_lock" context="PIN alphanumeric">Numeryczny PIN</string>
+    <string name="empty_inbox" context="Text that indicates that Inbox is empty">Pusty katalog</string>
+    <string name="context_correctly_sent_node" context="success message when sending a node to Inbox">Wysłane do skrzynki odbiorczej</string>
+    <string name="context_no_sent_node" context="error message when sending a node to Inbox">Błąd. Nie wysłane do skrzynki</string>
+    <string name="context_contact_invitation_sent" context="success message when sending a contact request">Zgłoszenie wysłane</string>
+    <string name="sortby_creation_date" context="category in sort by action">Data utworzenia</string>
+    <string name="sortby_modification_date" context="category in sort by action">Data modyfikacji</string>
+    <string name="contact_invite" context="positive button on dialog to invite a contact">Zaproszenie</string>
+    <string name="confirmation_add_contact" context="confirmation message before sending an invitation to a contact">Czy chcesz wysłać zaproszenie do %s?</string>
+    <string name="context_contact_request_sent" context="success message when sending a contact request">Zaproszenie zostało wysłane do %s. Status możesz sprawdzić w zakładce Wysłane zaproszenia.</string>
+    <string name="log_out_warning" context="alert when clicking a newsignup link being logged">Wyloguj się przed utworzeniem konta</string>
+    <string name="settings_enable_logs" context="Confirmation message when enabling logs in the app">Logowanie jest uruchomione</string>
+    <string name="settings_disable_logs" context="Confirmation message when disabling logs in the app">Logowanie jest zablokowane</string>
 </resources>
