--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -612,4 +612,44 @@
     <string name="account_error_upgraded" context="Message shown when the payment of an upgrade has not been correct">A operação não foi terminada correctamente. O cartão de crédito não será cobrado.</string>
     <string name="credit_card_information_error" context="Message shown when the credit card information is not correct">As informações relativas ao cartão de crédito não estão corretas. O cartão de crédito não será cobrado.</string>
     <string name="not_upgrade_is_possible" context="Message shown when the user wants to upgrade an account that cannot be upgraded">A sua conta não pode sofrer um upgrade a partir da aplicação. Por favor contacte support@mega.nz para fazer o upgrade da sua conta.</string>
+
+    <string name="menu_add_contact_and_share" context="Menu option to add a contact to your contact list.">Adicionar contacto e partilhar</string>
+    <string name="general_share" context="button">Partilhar</string>
+    <string name="general_remove" context="button">Remover</string>
+    <string name="general_confirm" context="button">Confirmar</string>
+    <string name="general_leave" context="button">Deixar</string>
+    <string name="general_decryp" context="button">Decrifrar</string>
+    <string name="general_export" context="button">Exportar</string>
+    <string name="confirmation_required" context="Alert title before download">Confirmação necessária</string>
+    <string name="alert_larger_file" context="Alert text before download">%s vai ser descarregado. Tem a certeza?</string>
+    <string name="alert_no_app" context="Alert text before download">Você não possui uma aplicação capaz de abrir o ficheiro %s. Quer prosseguir com a descarga?</string>
+    <string name="checkbox_not_show_again" context="Alert checkbox before download">Não mostrar novamente</string>
+    <string name="lastname_text" context="Last name of the user">Último Nome</string>
+    <string name="error_general_nodes" context="Error getting the root node">Erro. Por favor, tente novamente.</string>
+    <string name="settings_about_code_link_title" context="Link to the public code of the app">Ver código-fonte</string>
+    <string name="contacts_explorer_list_empty_text" context="Add new contacts before sharing.">Adicionar um contacto novo para começar a partilhar</string>
+    <string-array name="settings_storage_download_location_array" context="if the user has an internal and an external SD card, it has to be set on the settings screen">
+        <item context="internal SD card option">Cartão SD interno</item>
+        <item context="external SD card option">Cartão SD externo</item>
+    </string-array>
+    <string name="context_folder_no_created" context="error message when creating a folder">Erro. Pasta não criada</string>
+    <string name="rubbish_bin_emptied" context="success message when emptying the RB">Caixote do Lixo esvaziado com sucesso</string>
+    <string name="rubbish_bin_no_emptied" context="error message when emptying the RB">Erro. O Caixote do Lixo não foi esvaziado</string>
+    <string name="sortby_owner_mail" context="category in sort by action">E-mail do proprietário</string>
+    <string name="pin_lock_type" context="title to choose the type of PIN code">Tipo de código PIN</string>
+    <string name="four_pin_lock" context="PIN with 4 digits">PIN de 4 dígitos</string>
+    <string name="six_pin_lock" context="PIN with 6 digits">PIN de 6 dígitos</string>
+    <string name="AN_pin_lock" context="PIN alphanumeric">PIN alfanumérico</string>
+    <string name="empty_inbox" context="Text that indicates that Inbox is empty">Pasta Vazia</string>
+    <string name="context_correctly_sent_node" context="success message when sending a node to Inbox">Enviado para a Caixa de Entrada</string>
+    <string name="context_no_sent_node" context="error message when sending a node to Inbox">Erro. Falha ao enviar para a Caixa de Entrada</string>
+    <string name="context_contact_invitation_sent" context="success message when sending a contact request">Pedido enviado</string>
+    <string name="sortby_creation_date" context="category in sort by action">Data de criação</string>
+    <string name="sortby_modification_date" context="category in sort by action">Data de Modificação</string>
+    <string name="contact_invite" context="positive button on dialog to invite a contact">Convidar</string>
+    <string name="confirmation_add_contact" context="confirmation message before sending an invitation to a contact">Quer enviar um convite a %s?</string>
+    <string name="context_contact_request_sent" context="success message when sending a contact request">Pedido de contacto enviado com sucesso a %s. Pode verificar o estado no separador Pedidos Enviados.</string>
+    <string name="log_out_warning" context="alert when clicking a newsignup link being logged">Por favor termine a sessão antes de criar a conta</string>
+    <string name="settings_enable_logs" context="Confirmation message when enabling logs in the app">Os registos estão agora activos</string>
+    <string name="settings_disable_logs" context="Confirmation message when disabling logs in the app">Os registos estão agora inactivos</string>
 </resources>
